@startuml

title ___5_RESTAURANT's Class Diagram__\n

  namespace _5_Restaurant {
    class _5_Restaurant.Beverage {
        - milliliters : double
        + Beverage()
        + getMilliliters()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Cake {
        {static} - CAKE_CALORIES : double
        {static} - CAKE_GRAMS : double
        {static} - CAKE_PRICE : BigDecimal
        + Cake()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Coffee {
        {static} - COFFEE_MILLILITERS : double
        {static} - COFFEE_PRICE : BigDecimal
        - caffeine : double
        + Coffee()
        + getCaffeine()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.ColdBeverage {
        + ColdBeverage()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Dessert {
        - calories : double
        + Dessert()
        + getCalories()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Food {
        - grams : double
        + Food()
        + getGrams()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.HotBeverage {
        + HotBeverage()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Main {
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.MainDish {
        + MainDish()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Product {
        - name : String
        - price : BigDecimal
        + Product()
        + getName()
        + getPrice()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Salmon {
        {static} - SALMON_GRAMS : double
        + Salmon()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Soup {
        + Soup()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Starter {
        + Starter()
    }
  }
  

  namespace _5_Restaurant {
    class _5_Restaurant.Tea {
        + Tea()
    }
  }
  

  _5_Restaurant.Beverage -up-|> _5_Restaurant.Product
  _5_Restaurant.Cake -up-|> _5_Restaurant.Dessert
  _5_Restaurant.Coffee -up-|> _5_Restaurant.HotBeverage
  _5_Restaurant.ColdBeverage -up-|> _5_Restaurant.Beverage
  _5_Restaurant.Dessert -up-|> _5_Restaurant.Food
  _5_Restaurant.Food -up-|> _5_Restaurant.Product
  _5_Restaurant.HotBeverage -up-|> _5_Restaurant.Beverage
  _5_Restaurant.MainDish -up-|> _5_Restaurant.Food
  _5_Restaurant.Salmon -up-|> _5_Restaurant.MainDish
  _5_Restaurant.Soup -up-|> _5_Restaurant.Starter
  _5_Restaurant.Starter -up-|> _5_Restaurant.Food
  _5_Restaurant.Tea -up-|> _5_Restaurant.HotBeverage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
